Rename to GPT-3

--- a/GPT-3.ipynb
+++ b/GPT-3.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ChatGPT-3\n",
+    "## GPT-3\n",
     "\n",
     "Sandbox for exploring the GPT-3 API and best practices for prompt engineering.\n",
     "\n",
