Add AI agent conversation

--- a/GPT-3_chatbot.ipynb
+++ b/GPT-3_chatbot.ipynb
@@ -66,7 +66,7 @@
     "    panels.append(\n",
     "        pn.Row('User:', pn.pane.Markdown(prompt, width=600)))\n",
     "    panels.append(\n",
-    "        pn.Row('Assistant:', pn.pane.Markdown(response, width=600, style={'background-color': '#F6F6F6'})))\n",
+    "        pn.Row('AI Agent:', pn.pane.Markdown(response, width=600, style={'background-color': '#F6F6F6'})))\n",
     " \n",
     "    return pn.Column(*panels)\n"
    ]
@@ -626,6 +626,35 @@
     ")\n",
     "\n",
     "dashboard"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The interactive widget doesn't save between sessions nor does it upload to Github, so here's a copy of one conversation:\n",
+    "\n",
+    "**AI Agent:** Hello! Welcome to our bar. May I ask which table number you are seated at?\n",
+    "\n",
+    "**User:** 4\n",
+    "\n",
+    "**AI Agent:** Great, thank you! What can I get for you to drink? We have pale ale (5.7%) for $7.50, blonde ale (4.2%) for $7.50, IPA (6.2%) for $7.50, tangerine wheat (5%) for $7.50, and imperial stout (11%) for $8.50.\n",
+    "\n",
+    "**User:** 1 tangerine wheat, 1 stout, and 1 IPA please\n",
+    "\n",
+    "**AI Agent:** Sure thing! And what about food? We have pretzel for $8.00, nachos for $9.00, New England clam chowder for $8.00 (cup) or $6.00 (bowl), pepperoni flatbread for $16.00 (large) or $10.00 (small), and buffalo chicken flatbread for $16.00 (large) or $10.00 (small).\n",
+    "\n",
+    "**User:** 1 buffalo chicken flatbread, large please\n",
+    "\n",
+    "**AI Agent:** Great choice! Just to confirm, you would like 1 tangerine wheat, 1 imperial stout, and 1 IPA for drinks, and 1 buffalo chicken flatbread (large) for food, correct?\n",
+    "\n",
+    "**User:** Correct!\n",
+    "\n",
+    "**AI Agent:** Perfect! So, to summarize your order, you would like 1 tangerine wheat, 1 imperial stout, and 1 IPA for drinks, and 1 buffalo chicken flatbread (large) for food. Is there anything else I can get for you?\n",
+    "\n",
+    "**User:** That’s it!\n",
+    "\n",
+    "**AI Agent:** Alright then! Your order of 1 tangerine wheat, 1 imperial stout, and 1 IPA for drinks, and 1 buffalo chicken flatbread (large) for food has been submitted to our staff. Thank you for your order!"
    ]
   },
   {
