Add escapes for dollar signs

--- a/GPT-3_chatbot.ipynb
+++ b/GPT-3_chatbot.ipynb
@@ -638,11 +638,11 @@
     "\n",
     "**User:** 4\n",
     "\n",
-    "**AI Agent:** Great, thank you! What can I get for you to drink? We have pale ale (5.7%) for $7.50, blonde ale (4.2%) for $7.50, IPA (6.2%) for $7.50, tangerine wheat (5%) for $7.50, and imperial stout (11%) for $8.50.\n",
+    "**AI Agent:** Great, thank you! What can I get for you to drink? We have pale ale (5.7%) for \\\\$7.50, blonde ale (4.2%) for \\\\$7.50, IPA (6.2%) for \\\\$7.50, tangerine wheat (5%) for \\\\$7.50, and imperial stout (11%) for \\\\$8.50.\n",
     "\n",
     "**User:** 1 tangerine wheat, 1 stout, and 1 IPA please\n",
     "\n",
-    "**AI Agent:** Sure thing! And what about food? We have pretzel for $8.00, nachos for $9.00, New England clam chowder for $8.00 (cup) or $6.00 (bowl), pepperoni flatbread for $16.00 (large) or $10.00 (small), and buffalo chicken flatbread for $16.00 (large) or $10.00 (small).\n",
+    "**AI Agent:** Sure thing! And what about food? We have pretzel for \\\\$8.00, nachos for \\\\$9.00, New England clam chowder for \\\\$8.00 (cup) or \\\\$6.00 (bowl), pepperoni flatbread for \\\\$16.00 (large) or \\\\$10.00 (small), and buffalo chicken flatbread for \\\\$16.00 (large) or \\\\$10.00 (small).\n",
     "\n",
     "**User:** 1 buffalo chicken flatbread, large please\n",
     "\n",
